[gd_scene load_steps=4 format=3 uid="uid://o6cpbl4prssb"]

[ext_resource type="Script" uid="uid://c263ylw4o18ns" path="res://Card.gd" id="1_rjlel"]
[ext_resource type="Texture2D" uid="uid://dnr3diriii1g5" path="res://萝卜牌/bk_card4.png" id="2_rjlel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjlel"]
size = Vector2(70, 98)

[node name="Card" type="Node2D"]
script = ExtResource("1_rjlel")

[node name="CardImage" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_rjlel")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rjlel")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
